
syntax = "proto3";
package baiacu;
option java_package = "com.proto.baiacu";
option java_multiple_files = true;

// BIG INT NO JAVA É UMA STRING
message Key {
  string key = 1;
}

message Value {
  int64 version = 2;
  int64 timestamp = 3;
  bytes data = 4;   // o formato disso em java é ByteString
}

message KeyValue {
  Key key = 1;
  Value value = 2;
}

// ==============
//set(k,ts,d):(e,v')
message StoreRequest {
  KeyValue keyValue = 1;
}
message StoreResponse {
  string status = 1;
  Value value = 2;
}

// ==============
// get(k):(e,v')
message ShowRequest {
  Key key = 1;
}
message ShowResponse {
  string status = 1;
  Value value = 2;
}

// ==============
// del(k):(e,v')
message DestroyRequest {
  Key key = 1;
}
message DestroyResponse {
  string status = 1;  //
  Value value = 2;
}

// ==============
//del(k,vers):(e,v')
message DestroyByVersionRequest {
  Key key = 1;
  int64 version = 2;
}

message DestroyByVersionResponse {
  string status = 1;  //
  Value value = 2; // retorna a chave removida
}

// ==============
//testAndSet(k,v,vers):(e,v')
message TestAndSetRequest{
  KeyValue keyValue = 1;
  int64 version = 2;
}
message TestAndSetResponse{
  string status = 1;
  Value value = 2;
}

// ==============

service BaiacuService {
  rpc Store (StoreRequest) returns (StoreResponse) {}
  rpc Show (ShowRequest) returns (ShowResponse) {}
  rpc Destroy (DestroyRequest) returns (DestroyResponse) {}
  rpc DestroyByVersion (DestroyByVersionRequest) returns (DestroyByVersionResponse) {}
  rpc testAndSet (TestAndSetRequest) returns (TestAndSetResponse) {}
}